BIDU Gain: $ 156.15 Win %: 54.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5
BIDU Gain: $ -45.95 Win %: 49.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_TR_QP_DB8
BIDU Gain: $ 113.32 Win %: 55.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_TR_DB8
BIDU Gain: $ -12.39 Win %: 48.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AV_DB8
BIDU Gain: $ -11.57 Win %: 48.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AL_DB8
BIDU Gain: $ -123.15 Win %: 41.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_QP_DB8
BIDU Gain: $ 77.97 Win %: 51.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_TR_DB8
BIDU Gain: $ -100.38 Win %: 44.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_AV_DB8
BIDU Gain: $ -91.63 Win %: 41.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_QP_DB8
BIDU Gain: $ -17.69 Win %: 46.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QL_DB8
BIDU Gain: $ -62.71 Win %: 76.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QP_DB8
BIDU Gain: $ 107.18 Win %: 50.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_TR_IR2
BIDU Gain: $ -4.77 Win %: 54.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_TR_QP
BIDU Gain: $ -6.82 Win %: 52.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_QP_IR2
BIDU Gain: $ 169.44 Win %: 53.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_TR
BIDU Gain: $ 80.73 Win %: 50.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AV
BIDU Gain: $ 61.56 Win %: 45.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AL
BIDU Gain: $ -80.21 Win %: 45.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_QP
BIDU Gain: $ 112.46 Win %: 52.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_TR
BIDU Gain: $ 11.8 Win %: 50.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_AV
BIDU Gain: $ -61.86 Win %: 49.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_QP
BIDU Gain: $ 87.28 Win %: 55.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QL
BIDU Gain: $ -15.06 Win %: 82.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QP
BIDU Gain: $ -134.1 Win %: 43.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_AO_AC
BIDU Gain: $ 77.91 Win %: 49.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV
BIDU Gain: $ 75.84 Win %: 50.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_IR2
BIDU Gain: $ 181.96 Win %: 54.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_TR
BIDU Gain: $ 85.55 Win %: 58.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_AV
BIDU Gain: $ 46.64 Win %: 50.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_AL
BIDU Gain: $ 56.09 Win %: 52.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_VI
BIDU Gain: $ 53.75 Win %: 50.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_LI
BIDU Gain: $ 14.89 Win %: 53.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_QP
BIDU Gain: $ 72.17 Win %: 48.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM
BIDU Gain: $ 122.36 Win %: 55.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_SS
BIDU Gain: $ 93.18 Win %: 50.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_QL
BIDU Gain: $ 81.81 Win %: 50.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_DB8
BIDU Gain: $ 170.22 Win %: 58.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_AO
BIDU Gain: $ 54.03 Win %: 50.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_AC
BIDU Gain: $ 165.77 Win %: 58.00 in 114 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_IT
BIDU Gain: $ -83.09 Win %: 46.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_TR_QP_DB15
BIDU Gain: $ 36.41 Win %: 50.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV_TR_DB15
BIDU Gain: $ 71.1 Win %: 57.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV_AV_DB15
BIDU Gain: $ 35.03 Win %: 55.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV_AL_DB15
BIDU Gain: $ -132.99 Win %: 45.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV_QP_DB15
BIDU Gain: $ 1.98 Win %: 47.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_HM_TR_DB15
BIDU Gain: $ 93.61 Win %: 57.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_HM_AV_DB15
BIDU Gain: $ -124.61 Win %: 44.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_HM_QP_DB15
BIDU Gain: $ 7.9 Win %: 51.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_IT_QL_DB15
BIDU Gain: $ -63.95 Win %: 85.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_IT_QP_DB15
BIDU Gain: $ 45.01 Win %: 48.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_TR_IR4
BIDU Gain: $ -71.51 Win %: 54.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_TR_QP
BIDU Gain: $ -126.5 Win %: 49.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_QP_IR4
BIDU Gain: $ 162.36 Win %: 53.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV_TR
BIDU Gain: $ 159.83 Win %: 56.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV_AV
BIDU Gain: $ 119.98 Win %: 49.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV_AL
BIDU Gain: $ -91.65 Win %: 48.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV_QP
BIDU Gain: $ 117.04 Win %: 56.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_HM_TR
BIDU Gain: $ 120.2 Win %: 59.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_HM_AV
BIDU Gain: $ -159.84 Win %: 48.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_HM_QP
BIDU Gain: $ 66.3 Win %: 54.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_IT_QL
BIDU Gain: $ -57.36 Win %: 80.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_IT_QP
BIDU Gain: $ -252.5 Win %: 42.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_AO_AC
BIDU Gain: $ 139.81 Win %: 49.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV
BIDU Gain: $ 30.97 Win %: 48.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_IR4
BIDU Gain: $ 134.5 Win %: 52.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_TR
BIDU Gain: $ 211.3 Win %: 58.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_AV
BIDU Gain: $ 155.73 Win %: 53.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_AL
BIDU Gain: $ 57.61 Win %: 48.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_VI
BIDU Gain: $ 162.9 Win %: 54.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_LI
BIDU Gain: $ -94.13 Win %: 50.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_QP
BIDU Gain: $ 36.15 Win %: 52.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_HM
BIDU Gain: $ 138.35 Win %: 52.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_SS
BIDU Gain: $ 94.67 Win %: 47.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_QL
BIDU Gain: $ 40.68 Win %: 50.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_DB15
BIDU Gain: $ -4.7 Win %: 47.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_AO
BIDU Gain: $ 4.58 Win %: 50.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_AC
BIDU Gain: $ 76.48 Win %: 54.00 in 114 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_IT
BIDU Gain: $ 21.11 Win %: 57.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_TR_QP_DB8
BIDU Gain: $ 152.21 Win %: 54.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV_TR_DB8
BIDU Gain: $ 28.11 Win %: 51.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV_AV_DB8
BIDU Gain: $ 57.82 Win %: 50.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV_AL_DB8
BIDU Gain: $ -85.38 Win %: 46.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV_QP_DB8
BIDU Gain: $ 103.74 Win %: 51.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_HM_TR_DB8
BIDU Gain: $ -80.12 Win %: 43.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_HM_AV_DB8
BIDU Gain: $ -22.5 Win %: 52.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_HM_QP_DB8
BIDU Gain: $ 59.01 Win %: 52.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_IT_QL_DB8
BIDU Gain: $ -9.47 Win %: 84.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_IT_QP_DB8
BIDU Gain: $ 94.31 Win %: 52.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_TR_IR2
BIDU Gain: $ 12.95 Win %: 55.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_TR_QP
BIDU Gain: $ -35.56 Win %: 51.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_QP_IR2
BIDU Gain: $ 121.75 Win %: 52.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV_TR
BIDU Gain: $ 69.81 Win %: 55.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV_AV
BIDU Gain: $ 67.19 Win %: 48.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV_AL
BIDU Gain: $ -54.58 Win %: 47.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV_QP
BIDU Gain: $ 79.51 Win %: 50.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_HM_TR
BIDU Gain: $ -43.64 Win %: 44.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_HM_AV
BIDU Gain: $ -43.03 Win %: 53.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_HM_QP
BIDU Gain: $ 50.25 Win %: 56.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_IT_QL
BIDU Gain: $ -3.21 Win %: 86.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_IT_QP
BIDU Gain: $ 54.01 Win %: 54.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_AO_AC
BIDU Gain: $ 66.71 Win %: 52.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV
BIDU Gain: $ 58.2 Win %: 53.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_IR2
BIDU Gain: $ 125.89 Win %: 53.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_TR
BIDU Gain: $ 36.79 Win %: 54.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_AV
BIDU Gain: $ 52.85 Win %: 53.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_AL
BIDU Gain: $ 65.1 Win %: 50.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_VI
BIDU Gain: $ 32.11 Win %: 50.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_LI
BIDU Gain: $ 3.35 Win %: 56.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_QP
BIDU Gain: $ 37.87 Win %: 49.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_HM
BIDU Gain: $ 107.79 Win %: 52.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_SS
BIDU Gain: $ 85.27 Win %: 51.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_QL
BIDU Gain: $ 113.78 Win %: 50.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_DB8
BIDU Gain: $ 168.74 Win %: 57.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_AO
BIDU Gain: $ 26.31 Win %: 50.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_AC
BIDU Gain: $ 81.08 Win %: 59.00 in 114 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_IT
BIDU Gain: $ -83.69 Win %: 46.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_TR_QP_DB15
BIDU Gain: $ 36.41 Win %: 50.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_TR_DB15
BIDU Gain: $ 74.44 Win %: 57.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_AV_DB15
BIDU Gain: $ 30 Win %: 55.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_AL_DB15
BIDU Gain: $ -120.61 Win %: 45.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_QP_DB15
BIDU Gain: $ 1.98 Win %: 47.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM_TR_DB15
BIDU Gain: $ 86.76 Win %: 57.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM_AV_DB15
BIDU Gain: $ -134.37 Win %: 42.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM_QP_DB15
BIDU Gain: $ 20.92 Win %: 50.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_IT_QL_DB15
BIDU Gain: $ -16.51 Win %: 85.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_IT_QP_DB15
BIDU Gain: $ 45.01 Win %: 48.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_TR_IR4
BIDU Gain: $ -70.38 Win %: 54.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_TR_QP
BIDU Gain: $ -110.42 Win %: 50.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_QP_IR4
BIDU Gain: $ 162.36 Win %: 53.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_TR
BIDU Gain: $ 159.83 Win %: 56.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_AV
BIDU Gain: $ 117.48 Win %: 49.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_AL
BIDU Gain: $ -91.65 Win %: 48.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_QP
BIDU Gain: $ 117.04 Win %: 56.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM_TR
BIDU Gain: $ 115.23 Win %: 57.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM_AV
BIDU Gain: $ -150.01 Win %: 48.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM_QP
BIDU Gain: $ 62.33 Win %: 53.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_IT_QL
BIDU Gain: $ -57.36 Win %: 80.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_IT_QP
BIDU Gain: $ -252.5 Win %: 42.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_AO_AC
BIDU Gain: $ 135.12 Win %: 49.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV
BIDU Gain: $ 34.74 Win %: 48.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_IR4
BIDU Gain: $ 119.47 Win %: 50.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_TR
BIDU Gain: $ 211.3 Win %: 58.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_AV
BIDU Gain: $ 155.73 Win %: 53.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_AL
BIDU Gain: $ 48.77 Win %: 47.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_VI
BIDU Gain: $ 158.56 Win %: 54.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_LI
BIDU Gain: $ -94.13 Win %: 50.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_QP
BIDU Gain: $ 36.15 Win %: 52.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM
BIDU Gain: $ 138.35 Win %: 52.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_SS
BIDU Gain: $ 91.65 Win %: 47.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_QL
BIDU Gain: $ 57.6 Win %: 51.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_DB15
BIDU Gain: $ -4.7 Win %: 47.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_AO
BIDU Gain: $ 4.58 Win %: 50.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_AC
BIDU Gain: $ 76.48 Win %: 54.00 in 114 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_IT
BIDU Gain: $ 157.27 Win %: 54.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5
BIDU Gain: $ -47.22 Win %: 48.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_TR_QP_DB8
BIDU Gain: $ 113.84 Win %: 55.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_TR_DB8
BIDU Gain: $ -41.9 Win %: 52.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AV_DB8
BIDU Gain: $ -1.5 Win %: 46.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AL_DB8
BIDU Gain: $ -120.42 Win %: 42.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_QP_DB8
BIDU Gain: $ 92 Win %: 52.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_TR_DB8
BIDU Gain: $ -46.13 Win %: 48.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_AV_DB8
BIDU Gain: $ -88.21 Win %: 41.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_QP_DB8
BIDU Gain: $ -14.03 Win %: 47.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QL_DB8
BIDU Gain: $ -70.6 Win %: 76.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QP_DB8
BIDU Gain: $ 70.9 Win %: 48.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_TR_IR2
BIDU Gain: $ 3.04 Win %: 54.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_TR_QP
BIDU Gain: $ -6.81 Win %: 52.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_QP_IR2
BIDU Gain: $ 163.55 Win %: 52.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_TR
BIDU Gain: $ 108.46 Win %: 59.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AV
BIDU Gain: $ 98.83 Win %: 48.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_AL
BIDU Gain: $ -83.54 Win %: 45.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV_QP
BIDU Gain: $ 186.39 Win %: 53.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_TR
BIDU Gain: $ 124.66 Win %: 59.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_AV
BIDU Gain: $ 91.32 Win %: 55.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_AL
BIDU Gain: $ -65.75 Win %: 48.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM_QP
BIDU Gain: $ 92.1 Win %: 53.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QL
BIDU Gain: $ -17.92 Win %: 82.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_IT_QP
BIDU Gain: $ -137.4 Win %: 43.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_AO_AC
BIDU Gain: $ -8.66 Win %: 62.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_QP_PM
BIDU Gain: $ 64.47 Win %: 46.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_RV
BIDU Gain: $ 69.56 Win %: 50.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_IR2
BIDU Gain: $ 179.62 Win %: 53.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_TR
BIDU Gain: $ 92.71 Win %: 59.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_AV
BIDU Gain: $ 88.48 Win %: 51.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_AL
BIDU Gain: $ 54.3 Win %: 51.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_VI
BIDU Gain: $ 54.96 Win %: 50.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_LI
BIDU Gain: $ 24.08 Win %: 53.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_QP
BIDU Gain: $ 83.49 Win %: 48.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_HM
BIDU Gain: $ 123.06 Win %: 55.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_SS
BIDU Gain: $ 91.08 Win %: 49.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_QL
BIDU Gain: $ 91.98 Win %: 52.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_DB8
BIDU Gain: $ 140.44 Win %: 56.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_AO
BIDU Gain: $ 56.07 Win %: 51.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_AC
BIDU Gain: $ 163.43 Win %: 58.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_IT
BIDU Gain: $ 108.43 Win %: 60.00 in 115 days with algo TB4_HL_LO_QM_OB3_OS3_CB5_CS5_PM
BIDU Gain: $ -87.78 Win %: 46.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_TR_QP_DB15
BIDU Gain: $ 30.25 Win %: 50.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV_TR_DB15
BIDU Gain: $ 120.33 Win %: 56.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV_AV_DB15
BIDU Gain: $ 63.2 Win %: 53.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV_AL_DB15
BIDU Gain: $ -142.33 Win %: 44.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV_QP_DB15
BIDU Gain: $ 41.83 Win %: 51.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_HM_TR_DB15
BIDU Gain: $ 161.72 Win %: 57.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_HM_AV_DB15
BIDU Gain: $ -139.64 Win %: 42.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_HM_QP_DB15
BIDU Gain: $ 18.75 Win %: 51.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_IT_QL_DB15
BIDU Gain: $ -22.63 Win %: 85.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_IT_QP_DB15
BIDU Gain: $ 47.05 Win %: 48.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_TR_IR4
BIDU Gain: $ -68.11 Win %: 54.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_TR_QP
BIDU Gain: $ -107.67 Win %: 49.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_QP_IR4
BIDU Gain: $ 162.24 Win %: 53.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV_TR
BIDU Gain: $ 198.34 Win %: 60.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV_AV
BIDU Gain: $ 141.12 Win %: 51.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV_AL
BIDU Gain: $ -95.37 Win %: 47.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV_QP
BIDU Gain: $ 130.59 Win %: 51.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_HM_TR
BIDU Gain: $ 221.25 Win %: 58.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_HM_AV
BIDU Gain: $ 169.52 Win %: 55.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_HM_AL
BIDU Gain: $ -150.73 Win %: 47.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_HM_QP
BIDU Gain: $ 62.39 Win %: 53.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_IT_QL
BIDU Gain: $ -57.06 Win %: 80.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_IT_QP
BIDU Gain: $ -267.51 Win %: 41.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_AO_AC
BIDU Gain: $ -42.54 Win %: 56.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_QP_PM
BIDU Gain: $ 143.21 Win %: 49.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_RV
BIDU Gain: $ 31.15 Win %: 47.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_IR4
BIDU Gain: $ 134.12 Win %: 52.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_TR
BIDU Gain: $ 213.34 Win %: 59.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_AV
BIDU Gain: $ 155.58 Win %: 53.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_AL
BIDU Gain: $ 57.58 Win %: 47.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_VI
BIDU Gain: $ 158.06 Win %: 53.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_LI
BIDU Gain: $ -94.59 Win %: 49.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_QP
BIDU Gain: $ 35.86 Win %: 52.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_HM
BIDU Gain: $ 138.41 Win %: 53.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_SS
BIDU Gain: $ 94.73 Win %: 47.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_QL
BIDU Gain: $ 52.15 Win %: 51.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_DB15
BIDU Gain: $ -4.45 Win %: 47.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_AO
BIDU Gain: $ -6.53 Win %: 50.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_AC
BIDU Gain: $ 76.54 Win %: 54.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_IT
BIDU Gain: $ -2.7 Win %: 46.00 in 115 days with algo TB2_HL_HS_QM_OB2_OS2_CB5_CS5_PM
BIDU Gain: $ 23.62 Win %: 57.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_TR_QP_DB8
BIDU Gain: $ 152.73 Win %: 54.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV_TR_DB8
BIDU Gain: $ -17.72 Win %: 49.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV_AV_DB8
BIDU Gain: $ 54.68 Win %: 47.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV_AL_DB8
BIDU Gain: $ -78.47 Win %: 46.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV_QP_DB8
BIDU Gain: $ 142.66 Win %: 51.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_HM_TR_DB8
BIDU Gain: $ -45.13 Win %: 42.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_HM_AV_DB8
BIDU Gain: $ -20.39 Win %: 53.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_HM_QP_DB8
BIDU Gain: $ 59.53 Win %: 53.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_IT_QL_DB8
BIDU Gain: $ -15.82 Win %: 84.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_IT_QP_DB8
BIDU Gain: $ 94.83 Win %: 53.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_TR_IR2
BIDU Gain: $ 17.65 Win %: 56.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_TR_QP
BIDU Gain: $ -33.45 Win %: 52.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_QP_IR2
BIDU Gain: $ 122.27 Win %: 53.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV_TR
BIDU Gain: $ 39.18 Win %: 55.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV_AV
BIDU Gain: $ 80.57 Win %: 52.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV_AL
BIDU Gain: $ -52.34 Win %: 47.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV_QP
BIDU Gain: $ 117.11 Win %: 52.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_HM_TR
BIDU Gain: $ 31.23 Win %: 49.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_HM_AV
BIDU Gain: $ 28.94 Win %: 53.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_HM_AL
BIDU Gain: $ -34.39 Win %: 54.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_HM_QP
BIDU Gain: $ 50.77 Win %: 56.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_IT_QL
BIDU Gain: $ -8.25 Win %: 86.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_IT_QP
BIDU Gain: $ 51.31 Win %: 53.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_AO_AC
BIDU Gain: $ -1.59 Win %: 76.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_QP_PM
BIDU Gain: $ 69.15 Win %: 53.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_RV
BIDU Gain: $ 54.42 Win %: 53.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_IR2
BIDU Gain: $ 126.41 Win %: 53.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_TR
BIDU Gain: $ 39.51 Win %: 54.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_AV
BIDU Gain: $ 55.57 Win %: 53.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_AL
BIDU Gain: $ 64.88 Win %: 49.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_VI
BIDU Gain: $ 33.25 Win %: 50.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_LI
BIDU Gain: $ 0.29 Win %: 55.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_QP
BIDU Gain: $ 41.47 Win %: 49.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_HM
BIDU Gain: $ 115.75 Win %: 53.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_SS
BIDU Gain: $ 85.79 Win %: 52.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_QL
BIDU Gain: $ 114.3 Win %: 50.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_DB8
BIDU Gain: $ 167.12 Win %: 57.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_AO
BIDU Gain: $ 26.4 Win %: 50.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_AC
BIDU Gain: $ 71.67 Win %: 60.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_IT
BIDU Gain: $ 30.65 Win %: 59.00 in 115 days with algo TB4_HL_LO_QM_OB4_OS4_CB5_CS5_PM
BIDU Gain: $ -85.16 Win %: 46.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_TR_QP_DB15
BIDU Gain: $ 32.05 Win %: 51.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_TR_DB15
BIDU Gain: $ 124.95 Win %: 56.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_AV_DB15
BIDU Gain: $ 64.91 Win %: 54.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_AL_DB15
BIDU Gain: $ -136.49 Win %: 46.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_QP_DB15
BIDU Gain: $ 43.7 Win %: 52.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM_TR_DB15
BIDU Gain: $ 160.62 Win %: 57.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM_AV_DB15
BIDU Gain: $ -137.02 Win %: 43.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM_QP_DB15
BIDU Gain: $ 20.55 Win %: 52.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_IT_QL_DB15
BIDU Gain: $ -23.03 Win %: 85.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_IT_QP_DB15
BIDU Gain: $ 48.16 Win %: 49.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_TR_IR4
BIDU Gain: $ -66.02 Win %: 55.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_TR_QP
BIDU Gain: $ -107.3 Win %: 50.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_QP_IR4
BIDU Gain: $ 163.35 Win %: 53.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_TR
BIDU Gain: $ 218.93 Win %: 61.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_AV
BIDU Gain: $ 142.14 Win %: 52.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_AL
BIDU Gain: $ -93.28 Win %: 48.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV_QP
BIDU Gain: $ 137.63 Win %: 53.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM_TR
BIDU Gain: $ 219.46 Win %: 58.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM_AV
BIDU Gain: $ 170.54 Win %: 56.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM_AL
BIDU Gain: $ -150.08 Win %: 48.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM_QP
BIDU Gain: $ 61.99 Win %: 53.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_IT_QL
BIDU Gain: $ -57.44 Win %: 80.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_IT_QP
BIDU Gain: $ -260.17 Win %: 43.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_AO_AC
BIDU Gain: $ -31.58 Win %: 59.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_QP_PM
BIDU Gain: $ 144.32 Win %: 50.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_RV
BIDU Gain: $ 35.91 Win %: 49.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_IR4
BIDU Gain: $ 135.23 Win %: 53.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_TR
BIDU Gain: $ 211.55 Win %: 59.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_AV
BIDU Gain: $ 143.81 Win %: 53.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_AL
BIDU Gain: $ 60.35 Win %: 48.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_VI
BIDU Gain: $ 159.58 Win %: 54.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_LI
BIDU Gain: $ -92.47 Win %: 50.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_QP
BIDU Gain: $ 36.97 Win %: 53.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_HM
BIDU Gain: $ 139.52 Win %: 53.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_SS
BIDU Gain: $ 95.84 Win %: 48.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_QL
BIDU Gain: $ 50.03 Win %: 51.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_DB15
BIDU Gain: $ -3.46 Win %: 48.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_AO
BIDU Gain: $ -3.22 Win %: 51.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_AC
BIDU Gain: $ 76.14 Win %: 54.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_IT
BIDU Gain: $ 24.42 Win %: 46.00 in 115 days with algo TB2_HL_HS_QM_OB1_OS1_CB5_CS5_PM
